...
        app:cardElevation="0dp"
        app:strokeWidth="2dp"
        app:strokeColor="?attr/colorOutline"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:id="@+id/btn_play_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            android:gravity="center"
            android:background="?attr/selectableItemBackground"
...
        app:cardElevation="0dp"
        app:strokeWidth="2dp"
        app:strokeColor="?attr/colorOutline"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:id="@+id/btn_play_black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            android:gravity="center"
            android:background="?attr/selectableItemBackground"
...
